--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "got": "^14.4.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.2"
   }
